# drm-demo

./: CMakeLists.txt  README.md  common.h  drm-test.cpp  drm-tty.cpp  egl-drm-pageflip.cpp  meson.build  modeset-atomic-crtc.c  modeset-atomic-plane.c  modeset-double-buffer.c  modeset-plane-test.c  modeset-single-buffer.c  modeset-vsync.c
render/: fs.glsl  shader.h
